@@ -574,7 +574,7 @@ class NumericalParamEquationModel(Model):
         """ Put choice of solver for variable labelled name """
         self.isInList(value, ('multigrid', 'conjugate_gradient', 'jacobi',
                               'bi_cgstab', 'bi_cgstab2', 'gmres', 'automatic',
-                              'gauss_seidel', 'PCR3'))
+                              'gauss_seidel', 'symmetric_gauss_seidel', 'PCR3'))
         node = self._getSolverNameNode(name)
 
         default = self._defaultValues()['solver_choice']
